Bug 97139 - LibreOffice unresponsible after entering | symbol in particular document
Summary: LibreOffice unresponsible after entering | symbol in particular document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: high critical
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:5.2.0 target:5.1.2 target:5.0.6
Keywords: regression
: 97797 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-14 16:16 UTC by opensuse.lietuviu.kalba
Modified: 2016-10-25 19:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Testing ODT document (10.40 KB, application/vnd.oasis.opendocument.text)
2016-01-14 16:16 UTC, opensuse.lietuviu.kalba
Details
How to reproduce - video (webm) (2.19 MB, video/webm)
2016-01-14 16:24 UTC, opensuse.lietuviu.kalba
Details
LibreOffice 3.4.2 – not affected (webm video) (1.17 MB, video/webm)
2016-01-21 13:47 UTC, opensuse.lietuviu.kalba
Details

Note You need to log in before you can comment on or make changes to this bug.
Description opensuse.lietuviu.kalba 2016-01-14 16:16:59 UTC
Created attachment 121939 [details]
Testing ODT document

Originaly I had DOCX document. 
Then I saved it as ODT.
In table between words I inserted | symbols.
Then I inserted symbol between words „bulimija“ and „hiperfagija“, LibreOffice no longer responds to mouse or to keyboard...

I attach fragment of document for testing. 

Click mouse at end of line with word „bulimija“: please click not at last „a“ letter, but by two spaces to the right of last letter.
I marked in yellow color place, so you can it more easily.
Comment 1 opensuse.lietuviu.kalba 2016-01-14 16:24:27 UTC
Created attachment 121940 [details]
How to reproduce - video (webm)

I pressed | symbol in 6 second of video.
Symbol not show.
LibreOffice no longer react.
Comment 2 Buovjaga 2016-01-21 12:42:44 UTC
Reproduced with 5.2

NOT reproduced with 3.5.

I got this debug output for the hang in Windbg:

(1c7c.bd0): C++ EH exception - code e06d7363 (first chance)
(1c7c.bd0): C++ EH exception - code e06d7363 (first chance)
(1c7c.bd0): C++ EH exception - code e06d7363 (first chance)
ModLoad: 0ae20000 0afb5000   C:\Program Files (x86)\LibreOfficeDev 5\program\i18npoollo.dll


Mindaugas: what operating system did you use? Linux?

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 6b65a0e83c4798f117be61af91dbaebdc85e94b7
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-21_03:41:08
Locale: fi-FI (fi_FI)

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 3 opensuse.lietuviu.kalba 2016-01-21 12:44:27 UTC
I use openSUSE 13.2 (64-bit) Linux
Comment 4 opensuse.lietuviu.kalba 2016-01-21 12:46:20 UTC
I can reproduce in openSUSE Leap 42.1 Linux also.
Comment 5 opensuse.lietuviu.kalba 2016-01-21 13:01:15 UTC
I can reproduce in openSUSE 13.1 (32 bit) Linux + LibreOffice 4.3.3.2
ID: 9bb7eadab57b6755b1265afa86e04bf45fbfc644
Comment 6 opensuse.lietuviu.kalba 2016-01-21 13:14:46 UTC
I can reproduce in openSUSE 12.3 Linux + LibreOffice 4.0.1.2
Comment 7 opensuse.lietuviu.kalba 2016-01-21 13:34:11 UTC
In openSUSE 12.1 (32 bit) + LibreOffice 3.5.3.2
I can reproduce from first try only sometimes, but (if not reproduced) after doing undo and trying again – I can reproduce bug!
Comment 8 opensuse.lietuviu.kalba 2016-01-21 13:42:14 UTC
I can not reproduce in openSUSE 11.4 (32-bit) + LibreOffice 3.4.2
Comment 9 opensuse.lietuviu.kalba 2016-01-21 13:47:19 UTC
Created attachment 122131 [details]
LibreOffice 3.4.2 – not affected (webm video)
Comment 10 Buovjaga 2016-01-21 13:50:55 UTC
Oh dear, after undo I was able to reproduce in 3.5 as well :(

This means it cannot be bibisected, unfortunately.

But at least we know the range where the problem appeared: between 3.4.2 and 3.5.0

Mindaugas: in the future, you can use this method: https://wiki.documentfoundation.org/Installing_in_parallel/Linux
Comment 11 opensuse.lietuviu.kalba 2016-01-21 13:55:14 UTC
Thanks for suggestion, but fortunately I had multiple Linux ISO (LiveCD/LiveDVD/LiveUSB) images with different openSUSE+LibreOffice versions ;)
Comment 12 opensuse.lietuviu.kalba 2016-01-21 14:21:26 UTC
I can not reproduce in openSUSE 12.1 (32-bit) + LibreOffice 3.4.5 (tested in VirtualBox)
Comment 13 Commit Notification 2016-02-23 13:36:38 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b29f268387f30d1d13ca167029d0d276214afaa0

tdf#97139: prevent loop while formatting small text lines

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 opensuse.lietuviu.kalba 2016-02-24 13:05:23 UTC
Thanks! it works in 

Version: 5.2.0.0.alpha0+
Build ID: 1b6a84a5a24e7e02c6066ca0fcb5a0011d2decd6
CPU Threads: 4; OS Version: Linux 3.16; 
UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF-dbg, 
Branch:master, 
Time: 2016-02-24_07:29:17

Can you submit changes to LibreOffice 5.0 and 5.1? Please
Comment 15 Commit Notification 2016-02-28 10:25:34 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=05818ce01f1d4aa693235f46b6b4b922dffe648b&h=libreoffice-5-1

tdf#97139: prevent loop while formatting small text lines

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2016-03-17 08:00:33 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=40a304eb1f47f27e1a5c2ebda06a0726f22c36e3&h=libreoffice-5-0

tdf#97139: prevent loop while formatting small text lines

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Caolán McNamara 2016-05-24 15:03:32 UTC
*** Bug 97797 has been marked as a duplicate of this bug. ***