tdf#97139: prevent loop while formatting small text lines

when text is inserted at the end of a line then text formatting
starts some characters (platform and ENABLE_GRAPHITE dependent)
before the insert position. In case of small lines this might even
be the start of the line. To prevent going back to the previous
line the cursor right margin flag needs to be reset.

Change-Id: I73a62ce6c7707469fddeeffe0d7eec064c5989ea
Reviewed-on: https://gerrit.libreoffice.org/22641
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>